# tomviz

./: CMakeLists.txt
tests/cxx/: CMakeLists.txt  DockerUtilitiesTest.cxx  ModulePlotTest.cxx  OperatorPythonTest.cxx  PipelineDemo.cxx  PipelineExecutionTest.cxx  PipelineLibTest.cxx  PipelineSinkDemo.cxx  PipelineStripWidgetDemo.cxx  PtychoWorkflowTest.cxx  PyXRFWorkflowTest.cxx  ScanIDTest.cxx  Tvh5DataTest.cxx
tests/cxx/fixtures/: create_synthetic_tomo.py
tomviz/: AboutDialog.cxx  ActiveObjects.cxx  ActiveObjects.h  AddAlignReaction.cxx  AddExpressionReaction.cxx  AddPythonSourceReaction.cxx  AddPythonSourceReaction.h  AddPythonTransformReaction.cxx  AddPythonTransformReaction.h  AddResampleReaction.cxx  AlignWidget.cxx  AlignWidget.h  AnimationHelperDialog.cxx  AnimationHelperDialog.ui  ArrayWranglerReaction.cxx  AxesReaction.cxx  Behaviors.cxx  Behaviors.h  BrightnessContrastWidget.cxx  BrightnessContrastWidget.h  CMakeLists.txt  CentralWidget.cxx  CentralWidget.h  CloneDataReaction.cxx  ColorMap.cxx  ColorMap.h  ComputeHistogram.h  ConformVolumeDialog.cxx  ConformVolumeReaction.cxx  ConvertToFloatReaction.cxx  CropReaction.cxx  DataBroker.cxx  DataBrokerLoadReaction.cxx  DataBrokerLoadReaction.h  DataBrokerSaveReaction.cxx  DataExchangeFormat.cxx  DataExchangeFormat.h  DataPropertiesModel.h  DataSource.cxx  DataTransformMenu.cxx  (+121 more)
tomviz/acquisition/: AcquisitionWidget.cxx  ConnectionsWidget.cxx  PassiveAcquisitionWidget.cxx  RegexGroupsSubstitutionsWidget.cxx  RegexGroupsWidget.cxx
tomviz/animations/: ContourAnimation.h  ModuleAnimation.h  SliceAnimation.h
tomviz/core/: CMakeLists.txt
tomviz/legacy/: DataSource.cxx  ExternalPythonExecutor.cxx  Pipeline.cxx  PipelineExecutor.cxx  PipelineManager.h  PipelineModel.cxx  PipelineProxy.cxx  PipelineWorker.cxx  PythonGeneratedDatasetReaction.cxx
tomviz/legacy/modules/: Module.cxx  ModuleClip.cxx  ModuleContour.cxx  ModuleContourWidget.ui  ModuleFactory.cxx  ModuleManager.cxx  ModuleMenu.cxx  ModuleMolecule.cxx  ModuleOutline.cxx  ModulePlot.cxx  ModuleRuler.cxx  ModuleScaleCube.cxx  ModuleSegment.cxx  ModuleSlice.cxx  ModuleThreshold.cxx  ModuleVolume.cxx  ScalarsComboBox.cxx
tomviz/legacy/operators/: EditPythonOperatorWidget.ui  Operator.cxx  Operator.h  OperatorDialog.cxx  OperatorDialog.h  OperatorFactory.cxx  OperatorFactory.h  OperatorProxy.h  OperatorPython.cxx  OperatorResult.cxx
tomviz/legacy/pybind11/: OperatorPythonWrapper.cxx  PipelineStateManager.cxx
tomviz/loguru/: loguru.cpp
tomviz/modules/: ModuleManager.cxx  ModuleManager.h  ModuleVolume.cxx
tomviz/operators/: Operator.cxx  Operator.h  OperatorProxy.cxx  OperatorPython.cxx  OperatorPython.h  OperatorWidget.cxx  ReconstructionOperator.cxx  SnapshotOperator.cxx
tomviz/pipeline/: CMakeLists.txt  CustomNodeWidgetRegistry.cxx  CustomNodeWidgetRegistry.h  CustomPythonNodeWidget.cxx  CustomPythonNodeWidget.h  CustomPythonTransformWidget.cxx  CustomPythonTransformWidget.h  DefaultExecutor.cxx  DefaultExecutor.h  DeferredLinkInfo.h  EditNodeWidget.cxx  EditNodeWidget.h  EditTransformWidget.cxx  EditTransformWidget.h  ExecutionFuture.cxx  ExecutionFuture.h  ExternalNodeExecutor.cxx  ExternalNodeExecutor.h  InputPort.cxx  InputPort.h  InternalNodeExecutor.cxx  InternalNodeExecutor.h  LegacyStateLoader.cxx  LegacyStateLoader.h  Link.cxx  Link.h  Node.cxx  Node.h  NodeEditDialog.cxx  NodeEditDialog.h  NodeExecState.h  NodeExecutor.cxx  NodeExecutor.h  NodeExecutorFactory.cxx  NodeExecutorFactory.h  NodeFactory.cxx  NodeFactory.h  NodePropertiesPanel.cxx  NodePropertiesPanel.h  NodePropertiesWidget.cxx  (+72 more)
tomviz/pipeline/data/: VolumeData.cxx  VolumeData.h
tomviz/pipeline/pybind11/: PybindVTKTypeCaster.h
tomviz/pipeline/sinks/: ClipSink.cxx  ClipSink.h  ContourSink.cxx  ContourSink.h  ContourSinkWidget.cxx  ContourSinkWidget.h  ContourSinkWidget.ui  LegacyModuleSink.cxx  LegacyModuleSink.h  MoleculeSink.cxx  MoleculeSink.h  OutlineSink.cxx  OutlineSink.h  PlotSink.cxx  PlotSink.h  RulerSink.cxx  RulerSink.h  ScaleCubeSink.cxx  ScaleCubeSink.h  SegmentSink.cxx  SegmentSink.h  SegmentSinkWidget.cxx  SegmentSinkWidget.h  SegmentSinkWidget.ui  SliceSink.cxx  SliceSink.h  ThresholdSink.cxx  ThresholdSink.h  ThresholdSinkWidget.cxx  ThresholdSinkWidget.h  ThresholdSinkWidget.ui  VolumeSink.cxx  VolumeSink.h  VolumeSinkWidget.cxx  VolumeSinkWidget.h  VolumeSinkWidget.ui  VolumeStatsSink.cxx  VolumeStatsSink.h
tomviz/pipeline/sources/: DataReader.cxx  DataReader.h  PythonSource.cxx  PythonSource.h  ReaderSourceNode.cxx  ReaderSourceNode.h  SphereSource.cxx  SphereSource.h
tomviz/pipeline/transforms/: ArrayWranglerTransform.cxx  ArrayWranglerTransform.h  ConvertToFloatTransform.cxx  ConvertToFloatTransform.h  ConvertToVolumeTransform.cxx  ConvertToVolumeTransform.h  CropTransform.cxx  CropTransform.h  LegacyPythonTransform.cxx  LegacyPythonTransform.h  PythonTransform.cxx  PythonTransform.h  ReconstructionTransform.cxx  ReconstructionTransform.h  SetTiltAnglesTransform.cxx  SetTiltAnglesTransform.h  SnapshotTransform.cxx  (+7 more)
tomviz/pybind11/: CMakeLists.txt  Wrapping.cxx
tomviz/python/: AddConstant.json  AddConstant.py  AddPoissonNoise.json  AutoCenterOfMassTiltImageAlignment.json  AutoCrossCorrelationTiltImageAlignment.json  AutoTiltAxisRotationAlignment.json  AutoTiltAxisShiftAlignment.json  BinaryClose.json  BinaryDilate.json  BinaryErode.json  BinaryMinMaxCurvatureFlow.json  BinaryMinMaxCurvatureFlow.py  BinaryOpen.json  BinaryThreshold.json  CircleMask.json  ClipEdges.json  ConnectedComponents.json  ConstantDataset.json  ConstantDataset.py  CylindricalCrop.json  CylindricalCrop.py  DeconvolutionDenoise.json  DeleteSlices.json  DummyMolecule.json  ElastixRegistration.json  FourierShellCorrelation.json  GaussianFilter.json  GaussianFilterTiltSeries.json  GenerateTiltSeries.json  InvertData.json  InvertData.py  LabelObjectAttributes.json  LabelObjectDistanceFromPrincipalAxis.json  LabelObjectPrincipalAxes.json  ManualManipulation.json  MedianFilter.json  OtsuMultipleThreshold.json  OtsuMultipleThreshold.py  Pad_Data.json  PeronaMalikAnisotropicDiffusion.json  (+42 more)
(+71 files in other folders)
